--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/shelljs": "^0.8.3",
     "@types/ws": "^6.0.1",
     "fs-extra": "^7.0.1",
+    "node-inspect": "^1.11.5",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.3",
     "shelljs": "^0.8.3",
+    "socket.io-client": "^2.2.0",
     "ts-node": "^8.0.3",
     "tslint": "^5.14.0",
     "typescript": "^3.3.3333"
