--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "ws": "^6.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/fs-extra": "^5.0.5",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^11.11.3",
     "@types/shelljs": "^0.8.3",
     "@types/ws": "^6.0.1",
+    "chai": "^4.2.0",
     "fs-extra": "^7.0.1",
+    "mocha": "^6.0.2",
     "node-inspect": "^1.11.5",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
@@ -28,7 +32,7 @@
     "socket.io-client": "^2.2.0",
     "ts-node": "^8.0.3",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.4000"
   },
   "scripts": {
     "clean": "rimraf dist/*",
@@ -38,7 +42,7 @@
     "dev:start": "npm-run-all build start",
     "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require ts-node/register test/**/*.ts"
   },
   "author": "",
   "license": "ISC"
