--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "A nodejs app demonstrator",
   "main": "dist/app.js",
   "dependencies": {
+    "@types/redis": "^2.8.11",
     "@types/request": "^2.48.1",
     "@types/socket.io": "^2.1.2",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "redis": "^2.8.0",
     "requests": "^0.2.2",
     "socket.io": "^2.2.0",
     "ws": "^6.2.0"
