New: Mock API Workspace

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ SERVER_PORT=8080
 AUTH_SERVICE_URL=http://localhost:8081
 REDIS_HOST=localhost
 REDIS_PORT=9999
+
+AUTH_SERVICE_URL=http://localhost:9090/auth
