--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "3.3"
 services:
+  mock:
+    build: ./mock
+    ports: 
+      - 9090:9090
   redis:
     image: redis:latest
     ports: 
