--- a/mock/package.json
+++ b/mock/package.json
@@ -16,12 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.16.1",
     "body-parser": "^1.18.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4"
   },
   "devDependencies": {
     "lint": "^1.1.2",
+    "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
+    "tsc": "^1.20150623.0",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000"
   }
