--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "redis": "^2.8.0",
+    "request": "^2.88.0",
     "requests": "^0.2.2",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2",
