--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/socket.io": "^2.1.2",
     "@types/uuid": "^3.4.4",
     "body-parser": "^1.18.3",
+    "bunyan": "^1.8.12",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
