--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ services:
     image: redis:latest
     ports: 
       - "9999:6379"
+  rabbitmq:
+    image: rabbitmq:latest
+    ports:
+      - "15672:15672"
+      - "5672:5672"
