New: RabbitMQ handler

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ REDIS_HOST=localhost
 REDIS_PORT=9999
 JWT_SECRET=aaabbbccc
 AUTH_SERVICE_URL=http://localhost:9090/auth
+RABBITMQ_HOSTNAME=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=admin
+RABBITMQ_PASSWORD=admin
