--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A nodejs app demonstrator",
   "main": "dist/app.js",
   "dependencies": {
+    "@types/amqplib": "^0.5.11",
     "@types/express-jwt": "0.0.42",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/redis": "^2.8.11",
     "@types/request": "^2.48.1",
     "@types/socket.io": "^2.1.2",
     "@types/uuid": "^3.4.4",
+    "amqplib": "^0.5.3",
     "body-parser": "^1.18.3",
     "bunyan": "^1.8.12",
     "dotenv": "^7.0.0",
