--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - "9999:6379"
   rabbitmq:
     image: rabbitmq:latest
+    environment: 
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=admin 
     ports:
       - "15672:15672"
       - "5672:5672"
