--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports: 
       - "9999:6379"
   rabbitmq:
-    image: rabbitmq:latest
+    image: rabbitmq:management
     environment: 
       - RABBITMQ_DEFAULT_USER=admin
       - RABBITMQ_DEFAULT_PASS=admin 
