--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/redis": "^2.8.11",
     "@types/request": "^2.48.1",
     "@types/socket.io": "^2.1.2",
+    "@types/socketio-jwt": "0.0.0",
     "@types/uuid": "^3.4.4",
     "amqp-connection-manager": "^2.3.1",
     "amqplib": "^0.5.3",
@@ -24,6 +25,7 @@
     "request": "^2.88.0",
     "requests": "^0.2.2",
     "socket.io": "^2.2.0",
+    "socketio-jwt": "^4.5.0",
     "uuid": "^3.3.2",
     "ws": "^6.2.0"
   },
