--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,23 @@ services:
     ports:
       - "15672:15672"
       - "5672:5672"
+  elk:
+    image: sebp/elk
+    environment:
+      - ES_HEAP_SIZE=2g
+      - MAX_MAP_COUNT=262144
+      - ELASTICSEARCH_START=1
+      - LOGSTASH_START=1
+      - KIBANA_START=1
+    volumes: 
+      - ./elk/30-output.conf:/etc/logstash/conf.d/30-output.conf
+    ports:
+      - "5601:5601"
+      - "9200:9200"
+      - "5044:5044"
+      - "4718:4718"
+    deploy:
+      resources:
+        limits:
+          memory: 4g
+
