--- a/elk/30-output.conf
+++ b/elk/30-output.conf
@@ -3,6 +3,18 @@ input {
     port => 4718
     codec => json
   }
+
+  rabbitmq {
+      host => "${RABBITMQ_HOST:rabbitmq}"
+      exchange => "logs"
+      exchange_type => "fanout"
+      durable => true
+      automatic_recovery => true
+      threads => 30
+      user => "${RABBITMQ_USER:admin}"
+      password => "${RABBITMQ_PASSWORD:admin}"
+      queue => "logstash"
+  }
 }
 
 output {
