--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A nodejs app demonstrator",
   "main": "dist/app.js",
   "dependencies": {
+    "@log4js-node/rabbitmq": "^1.1.0",
     "@types/amqp-connection-manager": "^2.0.2",
     "@types/amqplib": "^0.5.11",
     "@types/express-jwt": "0.0.42",
@@ -21,6 +22,7 @@
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "log4js": "^4.1.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "requests": "^0.2.2",
@@ -40,7 +42,7 @@
     "@types/ws": "^6.0.1",
     "chai": "^4.2.0",
     "fs-extra": "^7.0.1",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.3",
     "node-inspect": "^1.11.5",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
