Make ELK logging through RabbitMQ Work

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ REDIS_PORT=9999
 JWT_SECRET=aaabbbccc
 AUTH_SERVICE_URL=http://localhost:9090/auth
 RABBITMQ_URL=amqp://admin:admin@localhost:5672
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
