--- a/elk/30-output.conf
+++ b/elk/30-output.conf
@@ -7,13 +7,14 @@ input {
   rabbitmq {
       host => "${RABBITMQ_HOST:rabbitmq}"
       exchange => "logs"
-      exchange_type => "fanout"
+      exchange_type => "direct"
       durable => true
       automatic_recovery => true
       threads => 30
       user => "${RABBITMQ_USER:admin}"
       password => "${RABBITMQ_PASSWORD:admin}"
       queue => "logstash"
+      key => "logstash"
   }
 }
 
