--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "simple-nodejs-rest",
   "version": "1.0.0",
   "description": "A nodejs app demonstrator",
-  "main": "dist/app.js",
+  "main": "dist/bin/local.js",
   "dependencies": {
     "@log4js-node/rabbitmq": "^1.1.0",
     "@types/amqp-connection-manager": "^2.0.2",
     "@types/amqplib": "^0.5.11",
+    "@types/express-cluster": "0.0.0",
     "@types/express-jwt": "0.0.42",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/redis": "^2.8.11",
@@ -23,6 +24,7 @@
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^4.1.0",
+    "properties-reader": "0.0.16",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "requests": "^0.2.2",
@@ -41,6 +43,7 @@
     "@types/shelljs": "^0.8.3",
     "@types/ws": "^6.0.1",
     "chai": "^4.2.0",
+    "express-cluster": "0.0.5",
     "fs-extra": "^7.0.1",
     "mocha": "^6.1.3",
     "node-inspect": "^1.11.5",
