--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/socket.io": "^2.1.2",
     "@types/socketio-jwt": "0.0.0",
     "@types/uuid": "^3.4.4",
+    "aes-js": "^3.1.2",
     "amqp-connection-manager": "^2.3.1",
     "amqplib": "^0.5.3",
     "body-parser": "^1.18.3",
